--- a/Languages/English/Keyed/Sandy_Detailed_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_Detailed_RPG_Gear.xml
@@ -4,5 +4,11 @@
   <SandyMassCarried>Mass carried</SandyMassCarried>
   <SandyMassValue> {0} / {1} kg</SandyMassValue>
   <Sandy_ViewList>Show list</Sandy_ViewList>
+  <Sandy_Head>Head Overhead</Sandy_Head>
+  <Sandy_TorsoMiddle>Torso Middle</Sandy_TorsoMiddle>
+  <Sandy_TorsoOnSkin>Torso OnSkin</Sandy_TorsoOnSkin>
+  <Sandy_TorsoShell>Torso Shell</Sandy_TorsoShell>
+  <Sandy_Belt>Belt</Sandy_Belt>
+  <Sandy_Pants>Legs OnSkin</Sandy_Pants>
 
 </LanguageData>
