--- a/Languages/English/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_RPG_Gear.xml
@@ -14,5 +14,6 @@
   <RPG_Inventory_Width>Gear Tab - Width</RPG_Inventory_Width>
   <RPG_Inventory_Height>Gear Tab - Height</RPG_Inventory_Height>
   <RPG_Style_Inventory_Title>RPG Style Inventory</RPG_Style_Inventory_Title>
+  <RPG_Style_Inventory_ArmorHarmony>Magic Defense</RPG_Style_Inventory_ArmorHarmony>
 
 </LanguageData>
