--- a/Languages/English/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_RPG_Gear.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LanguageData>
-
   <SandyMassCarried>Mass carried</SandyMassCarried>
   <SandyMassValue> {0} / {1} kg</SandyMassValue>
   <Sandy_ViewList>Show list</Sandy_ViewList>
-  <Sandy_Head>Head Overhead</Sandy_Head>
-  <Sandy_TorsoMiddle>Torso Middle</Sandy_TorsoMiddle>
-  <Sandy_TorsoOnSkin>Torso OnSkin</Sandy_TorsoOnSkin>
-  <Sandy_TorsoShell>Torso Shell</Sandy_TorsoShell>
-  <Sandy_Belt>Belt</Sandy_Belt>
-  <Sandy_Pants>Legs OnSkin</Sandy_Pants>
   <RPG_Inventory_Width>Gear Tab - Width</RPG_Inventory_Width>
   <RPG_Inventory_Height>Gear Tab - Height</RPG_Inventory_Height>
   <RPG_Style_Inventory_Title>RPG Style Inventory</RPG_Style_Inventory_Title>
   <RPG_Style_Inventory_ArmorHarmony>Magic Defense</RPG_Style_Inventory_ArmorHarmony>
-
+  <RPG_Display_All_Slots_Label>Display ALL slots</RPG_Display_All_Slots_Label>
+  <RPG_Display_All_Slots_Note>Display all supported slots even if it's impossible to use them</RPG_Display_All_Slots_Note> 
+  <Primary_Weapon>Primary Weapon</Primary_Weapon>
+  <Secondary_Weapon>Off-hand Weapon</Secondary_Weapon>
+  <AutoFitWidth_Button_Label>Autofit Widh</AutoFitWidth_Button_Label>
 </LanguageData>
