- added an option to show comfy temp on the same line - reorganized mod integrations to make them look formal - added missed stat display on viewlist for RWoM - created methods for some repeating code - mainstreamed placeholder declaration - added placeholder overlap check

--- a/Languages/English/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_RPG_Gear.xml
@@ -13,4 +13,6 @@
   <Primary_Weapon>Primary Weapon</Primary_Weapon>
   <Secondary_Weapon>Off-hand Weapon</Secondary_Weapon>
   <AutoFitWidth_Button_Label>Autofit Widh</AutoFitWidth_Button_Label>
+  <RPG_Dispaly_Temp_On_The_Same_Line_Label>Display comfortable temperature values on the same line</RPG_Dispaly_Temp_On_The_Same_Line_Label>
+  <RPG_Dispaly_Temp_On_The_Same_Line_Note></RPG_Dispaly_Temp_On_The_Same_Line_Note>
 </LanguageData>
