--- a/Languages/English/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_RPG_Gear.xml
@@ -12,7 +12,9 @@
   <RPG_Display_All_Slots_Note>Display all supported slots even if it's impossible to use them</RPG_Display_All_Slots_Note> 
   <Primary_Weapon>Primary Weapon</Primary_Weapon>
   <Secondary_Weapon>Off-hand Weapon</Secondary_Weapon>
-  <AutoFitWidth_Button_Label>Autofit Widh</AutoFitWidth_Button_Label>
+  <AutoFitWidth_Button_Label>Autofit Width (Closest)</AutoFitWidth_Button_Label>
+  <AutoFitWidth_Tight_Button_Label>Autofit Width (Tight)</AutoFitWidth_Tight_Button_Label>
+  <AutoFitWidth_Wide_Button_Label>Autofit Width (Wide)</AutoFitWidth_Wide_Button_Label>
   <RPG_Dispaly_Temp_On_The_Same_Line_Label>Display comfortable temperature values on the same line</RPG_Dispaly_Temp_On_The_Same_Line_Label>
   <RPG_Dispaly_Temp_On_The_Same_Line_Note></RPG_Dispaly_Temp_On_The_Same_Line_Note>
 </LanguageData>
