--- a/Languages/English/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_RPG_Gear.xml
@@ -18,4 +18,15 @@
   <RPG_Dispaly_Temp_On_The_Same_Line_Label>Display comfortable temperature values on the same line</RPG_Dispaly_Temp_On_The_Same_Line_Label>
   <RPG_Dispaly_Temp_On_The_Same_Line_Note></RPG_Dispaly_Temp_On_The_Same_Line_Note>
   <Sandy_SimplifiedView>Simple</Sandy_SimplifiedView>
+  <RPG_Display_Apparel_Healthbar_Label>Display equipment healthbar</RPG_Display_Apparel_Healthbar_Label>
+  <RPG_Display_Apparel_Healthbar_Note>Instead of health-background</RPG_Display_Apparel_Healthbar_Note>
+  <RPG_Colors_Changing>Changing {0}</RPG_Colors_Changing>
+  <RPG_Colors_Apply>Apply</RPG_Colors_Apply>
+  <RPG_Colors_Red>Red: </RPG_Colors_Red>
+  <RPG_Colors_Green>Green: </RPG_Colors_Green>
+  <RPG_Colors_Blue>Blue: </RPG_Colors_Blue>
+  <RPG_Colors_Preview>Preview: </RPG_Colors_Preview>
+  <RPG_Colors_Button_Label>Change</RPG_Colors_Button_Label>
+  <RPG_Color_Codes_Label>Use color coding</RPG_Color_Codes_Label>
+  <RPG_Color_Codes_Note></RPG_Color_Codes_Note>
 </LanguageData>
