--- a/Languages/English/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/English/Keyed/Sandy_RPG_Gear.xml
@@ -2,9 +2,9 @@
 
 <LanguageData>
 
-  <SandyMassCarried>Mass carried</SandyMassCarried>
+  <SandyMassCarried>Mass Carried</SandyMassCarried>
   <SandyMassValue> {0} / {1} kg</SandyMassValue>
-  <Sandy_ViewList>Show list</Sandy_ViewList>
+  <Sandy_ViewList>Show List</Sandy_ViewList>
   <Sandy_Head>Head Overhead</Sandy_Head>
   <Sandy_TorsoMiddle>Torso Middle</Sandy_TorsoMiddle>
   <Sandy_TorsoOnSkin>Torso OnSkin</Sandy_TorsoOnSkin>
