--- a/Languages/ChineseSimplified/Keyed/Sandy_RPG_Gear.xml
+++ b/Languages/ChineseSimplified/Keyed/Sandy_RPG_Gear.xml
@@ -4,11 +4,14 @@
   <SandyMassCarried>当前负重</SandyMassCarried>
   <SandyMassValue> {0} / {1} kg</SandyMassValue>
   <Sandy_ViewList>显示列表</Sandy_ViewList>
-  <Sandy_Head>头 Overhead</Sandy_Head>
-  <Sandy_TorsoMiddle>躯干 Middle</Sandy_TorsoMiddle>
-  <Sandy_TorsoOnSkin>躯干 OnSkin</Sandy_TorsoOnSkin>
-  <Sandy_TorsoShell>躯干 Shell</Sandy_TorsoShell>
-  <Sandy_Belt>带</Sandy_Belt>
-  <Sandy_Pants>腿 OnSkin</Sandy_Pants>
+  <Sandy_Head>头部</Sandy_Head>
+  <Sandy_TorsoMiddle>躯干（夹层）</Sandy_TorsoMiddle>
+  <Sandy_TorsoOnSkin>躯干（贴身）</Sandy_TorsoOnSkin>
+  <Sandy_TorsoShell>躯干（外套）</Sandy_TorsoShell>
+  <Sandy_Belt>配件</Sandy_Belt>
+  <Sandy_Pants>裤子</Sandy_Pants>
+  <RPG_Inventory_Width>装备界面——宽度</RPG_Inventory_Width>
+  <RPG_Inventory_Height>装备界面——高度</RPG_Inventory_Height>
+  <RPG_Style_Inventory_Title>RPG Style Inventory</RPG_Style_Inventory_Title>
 
 </LanguageData>
